<resources>
    <string name="app_name">UngDungWeb-DEMO</string>
    <string name="guest_name">GUEST</string>
    <string name="search">Search here</string>
    <string name="dat_hang">DAT HANG</string>
    <string name="coupon">Coupon</string>
    <string name="tich_diem">Tich Diem</string>
    <string name="goi_y">Goi Y</string>
    <string name="description">Guest Image</string>
    <!--    <string name="title_activity_maps">Dia chi</string>-->
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
