<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:elevation="10dp"
        android:paddingBottom="10dp"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="95dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgAva">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="welcome"
                android:textColor="#303030"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/tv_fragment_main_name"

                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_fragment_main_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest_name"
                android:textColor="#303030"

                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:enabled="false"
                android:id="@+id/menu_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_margin="0dp"
                android:background="@android:color/transparent"
                android:drawableBottom="@drawable/menu_icon"
                android:paddingEnd="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/imgAva"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:clickable="true"
            android:contentDescription="@string/description"
            android:src="@drawable/ava"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FDE4CC"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:orientation="vertical">


            <GridLayout
                android:id="@+id/border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/bg_round_corner"
                android:elevation="10dp"
                android:foregroundGravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="20dp"
                android:rowCount="2">

                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:elevation="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/btn_fragment_main_DatHang"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:background="@drawable/circle"
                            android:src="@drawable/ic_goiy"
                            android:text="@string/dat_hang" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Đặt Hàng"
                            android:textAllCaps="true"
                            android:textColor="#000"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/btn_fragment_main_Coupon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:background="@drawable/circle"
                            android:elevation="5dp"
                            android:src="@drawable/ic_coupon"
                            android:text="@string/coupon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="Mã Khuyến mãi"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="#000"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/btn_fragment_main_TichDiem"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:background="@drawable/circle"
                            android:elevation="5dp"
                            android:src="@drawable/ic_tichdiem"
                            android:text="@string/tich_diem" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Tích Điểm"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="#000"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/btn_fragment_main_DiaChi"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:background="@drawable/circle"
                            android:elevation="5dp"
                            android:src="@drawable/ic_location"
                            android:text="@string/goi_y" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Địa chỉ"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="#000"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/btn_fragment_main_thongbao"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:background="@drawable/circle"
                            android:elevation="5dp"
                            android:src="@drawable/request"
                            android:text="@string/goi_y" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Thông Báo"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="#000"
                            android:textSize="15sp" />


                    </LinearLayout>




                </LinearLayout>

            </GridLayout>

            <LinearLayout
                android:elevation="10dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">
                <ViewFlipper
                    android:id="@+id/vflipper_slideshow"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="20dp"/>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</LinearLayout>
